# telegram-payment-bot

./: main.py  payments.xlsx  pyproject.toml  requirements.txt
