
[project]
name = "telegram-payment-bot"
version = "0.1.0"
dependencies = [
  "python-telegram-bot==13.15",
  "openpyxl",
  "telegram>=0.0.1",
  "apscheduler>=3.6.3",
  "jdatetime>=5.2.0",
  "pytz>=2025.2",
]
requires-python = ">=3.11"

[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"